# BA8

./: BA  BA.h  BA3  CMakeLists.txt  Compiler  Ex.cpp  Experiment.cpp  MQTT.py  Publik.cpp  Publik1.cpp  Publik2.cpp  Publish2.cpp  Publisher.cpp  Publisher3.cpp  README.md  String to Double  Test24  VSBA  Workspacefolder  a.out  klaro  test
FürBA/: CMakeLists.txt  ExperimentHTTPein.cpp  ExperimentHTTPhalb.cpp  ExperimentHTTPvoll.cpp  ExperimentQoS0ein.cpp  ExperimentQoS0halb.cpp  ExperimentQoS0voll.cpp  ExperimentQoS1ein.cpp  ExperimentQoS1halb.cpp  ExperimentQoS1voll.cpp  ExperimentQoS2ein.cpp  ExperimentQoS2halb.cpp  ExperimentQoS2voll.cpp  HTTPServer.js
build2/: CMakeCache.txt
